--- a/chall05/challenges05.html
+++ b/chall05/challenges05.html
@@ -17,9 +17,9 @@
       <span>Playlist</span>
     </div>
     <div class="music-box">
-      <!-- <div class="music-box__imges"> -->
-      <i class="far fa-image fa-3x"></i>
-      <!-- </div> -->
+      <div class="music-box__imges">
+        <i class="far fa-image fa-3x"></i>
+      </div>
       <div class="music-box__text">
         <div class="music-box__text__title">Random Love</div>
         <div class="music-box__text__singer">by Divay Kapoor</div>
